--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "blockchainbot",
+  "name": "chainbase-discord-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "start": "node index.js",
   "scripts": {
-    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Supreme",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.6.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "moralis": "2.17.0",
-    "nodemon": "^2.0.20"
-  },
-  "engines": {
-    "node": ">=16.11.0"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2"
   }
 }
