--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "discord.js": "^14.13.0",
     "express": "^4.18.2"
   }
 }
