--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "body-parser": "^1.20.2",
     "discord.js": "^14.13.0",
     "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=16.11.0"
   }
 }
