--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api": "^6.1.1",
     "body-parser": "^1.20.2",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
