--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "api": "^6.1.1",
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=16.11.0"
