--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.2.0"
+    "mongodb": "^6.2.0",
+    "resend": "^1.1.0"
   },
   "engines": {
     "node": ">=16.11.0"
